k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-api
                port:
                  number: 80
